# libvmm

./: .project  CMakeLists.txt  LICENSE  README.md
luajit-modify/: CMakeLists.txt  lj_alloc.c
src/: CMakeLists.txt  dllmain.cpp  dllmain.h  libvmm.h  mem_core.cpp  mem_core.hpp
src/incl/cntrs/: bit-array.hpp
src/incl/cpp/: phoenix.hpp  type_traits.hpp
src/incl/os/: os_mem_functions.hpp
src/xw-incl/cntrs/: bit-array.hpp
src/xw-incl/cpp/: phoenix.hpp  terminable_base.hpp
src/xw-incl/os/: os_mem_functions.hpp
test/: L.lua
